# postgre-rust

./: .env  Cargo.toml  Dockerfile  Readme.md  api.http  compose.yaml  init.sql  update_imports.sh
src/: lib.rs  main.rs
src/adapters/primary/: cli.rs  http.rs
src/adapters/secondary/: mod.rs  psql_repo.rs
src/application/: user_service.rs
src/domain/: model.rs
src/ports/primary/: http.rs
src/ports/secondary/: repo.rs
src/primary/: cli_adapter.rs  cli_port.rs  http_adapter.rs  http_port.rs
src/secondary/: psql_repo.rs  repo_port.rs
