[package]
name = "postgre-rust"
version = "0.1.0"
edition = "2021"
authors = ["David Tavan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

# Add dependencies here
[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }

# Add dev dependencies here
[dev-dependencies]
