[package]
name = "postgre-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "1.45.0", features = ["full"] }
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
